claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/Ordem_Servico__c.object-meta.xml
<CustomObject>
    <label>Ordem de Serviço</label>
    <pluralLabel>Ordens de Serviço</pluralLabel>
    <description>Chamado de manutenção sobre um equipamento.</description>
    <nameField>
        <label>Número da OS</label>
        <type>AutoNumber</type>
        <displayFormat>OS-{00000}</displayFormat>
    </nameField>
    <!-- ControlledByParent e' OBRIGATORIO em objeto com master-detail:
         a seguranca do filho e' herdada do pai, nao definida aqui. -->
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>