claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/Abertura__c.field-meta.xml
<CustomField>
    <fullName>Abertura__c</fullName>
    <label>Abertura</label>
    <description>Momento da abertura. Preenchido no trigger before insert se vier vazio.</description>
    <type>DateTime</type>
</CustomField>