claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/Conclusao__c.field-meta.xml
<CustomField>
    <fullName>Conclusao__c</fullName>
    <label>Conclusão</label>
    <description>Momento da conclusão. Preenchido pelo serviço, não pelo usuário.</description>
    <type>DateTime</type>
</CustomField>