claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/Dentro_SLA__c.field-meta.xml
<CustomField>
    <fullName>Dentro_SLA__c</fullName>
    <label>Dentro do SLA</label>
    <description>Se concluída, compara conclusão x abertura. Se aberta, compara agora x abertura — por isso o valor muda sozinho ao longo do dia.</description>
    <type>Checkbox</type>
    <formula>IF(
  ISBLANK(Abertura__c),
  FALSE,
  IF(
    ISBLANK(Conclusao__c),
    (NOW() - Abertura__c) * 24 &lt;= SLA_Horas__c,
    (Conclusao__c - Abertura__c) * 24 &lt;= SLA_Horas__c
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>