claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descrição</label>
    <description>Relato do problema. LongTextArea não é indexado para filtro — não use em WHERE.</description>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>