claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/Horas_Gastas__c.field-meta.xml
<CustomField>
    <fullName>Horas_Gastas__c</fullName>
    <label>Horas Gastas</label>
    <description>Horas de mão de obra. Obrigatório ao concluir (ver validation rule).</description>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
</CustomField>