claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/Prioridade__c.field-meta.xml
<CustomField>
    <fullName>Prioridade__c</fullName>
    <label>Prioridade</label>
    <description>Determina o SLA em horas (ver campo fórmula SLA_Horas__c).</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critica</fullName>
                <label>Crítica</label>
            </value>
            <value>
                <fullName>Alta</fullName>
            </value>
            <value>
                <fullName>Normal</fullName>
                <default>true</default>
                <label>Normal</label>
            </value>
            <value>
                <fullName>Baixa</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>