claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/SLA_Horas__c.field-meta.xml
<CustomField>
    <fullName>SLA_Horas__c</fullName>
    <label>SLA (horas)</label>
    <description>Prazo de atendimento derivado da prioridade. Fórmula: muda sem deploy de código, mas exige deploy de metadado. Ver exercício 3 do README.</description>
    <type>Number</type>
    <precision>4</precision>
    <scale>0</scale>
    <formula>CASE(TEXT(Prioridade__c),
  "Critica", 4,
  "Alta",    8,
  "Normal",  24,
  "Baixa",   72,
  24)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>