claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <description>Máquina de estados: Aberta → Em andamento → Concluída. Cancelada é terminal.</description>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aberta</fullName>
                <default>true</default>
                <label>Aberta</label>
            </value>
            <value>
                <fullName>Em andamento</fullName>
            </value>
            <value>
                <fullName>Concluida</fullName>
                <label>Concluída</label>
            </value>
            <value>
                <fullName>Cancelada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>