claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/fields/Tecnico__c.field-meta.xml
<CustomField>
    <fullName>Tecnico__c</fullName>
    <label>Técnico</label>
    <description>Responsável pela execução. Lookup para User — não pode ser master-detail (User é objeto de sistema).</description>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipName>Ordens_de_Servico</relationshipName>
    <relationshipLabel>Ordens de Serviço (Técnico)</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>