claude-code-agent/salesforce/07-projeto-modelo/force-app/main/default/objects/Ordem_Servico__c/validationRules/Horas_Obrigatorias_Ao_Concluir.validationRule-meta.xml
<ValidationRule>
    <fullName>Horas_Obrigatorias_Ao_Concluir</fullName>
    <active>true</active>
    <description>Não se conclui uma OS sem registrar as horas gastas.</description>
    <errorConditionFormula>AND(
  ISPICKVAL(Status__c, "Concluida"),
  OR(
    ISBLANK(Horas_Gastas__c),
    Horas_Gastas__c &lt;= 0
  )
)</errorConditionFormula>
    <errorDisplayField>Horas_Gastas__c</errorDisplayField>
    <errorMessage>Informe as horas gastas (maior que zero) para concluir a ordem de serviço.</errorMessage>
</ValidationRule>